# dataChatAgent

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  main.py  pyproject.toml  questions.txt
data/: payments_202511091122.csv  subscriptions_202511091123.csv  users_202511091124.csv
datachatagent/: __init__.py  main.py
datachatagent/engine/: __init__.py  analysis.py
datachatagent/intake/: __init__.py  catalog.py  slack_app.py
datachatagent/output/: __init__.py  formatter.py
datachatagent/semantic/: loader.py  payments.yaml  semantic.yaml  subscriptions.yaml  users.yaml
docs/: pandasai_config.md
engine/: analysis.py  pandasai_client.py
intake/: catalog.py  router.py  slack_app.py
output/: formatter.py
semantic/: __init__.py  loader.py
tests/: test_catalog.py  test_engine_analysis.py  test_main.py  test_output_formatter.py  test_pandasai_client.py  test_router.py  test_slack_app.py
